# agman

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TASK.md  ideas.md  release.sh
.githooks/: post-merge
src/: agent.rs  agent_model.rs  assistant.rs  break_persist.rs  cli.rs  command.rs  config.rs  dismissed_notifications.rs  flow.rs  git.rs  inbox.rs  lib.rs  logging.rs  main.rs  migration.rs  project.rs  repo_stats.rs  researcher.rs  supervisor.rs  task.rs  telegram.rs  templates.rs  tmux.rs  use_cases.rs
src/harness/: claude.rs  codex.rs  goose.rs  mod.rs  pi.rs
src/tui/: app.rs  log_render.rs  mod.rs  ui.rs  vim.rs
tests/: agent_test.rs  break_persist_test.rs  cli_test.rs  command_test.rs  config_test.rs  dismissed_notifications_test.rs  flow_test.rs  git_test.rs  harness_test.rs  inbox_test.rs  migration_test.rs  repo_stats_test.rs  supervisor_tmux_test.rs  task_test.rs  telegram_test.rs  tmux_test.rs  tmux_visibility_test.rs  use_cases_test.rs
tests/fixtures/pane_ready/: claude_loading.txt  claude_ready_narrow.txt  claude_ready_wide.txt  claude_resume_fail.txt  claude_thinking.txt  claude_trust_prompt.txt  modal_absent.txt  modal_phrases_deep.txt  modal_present.txt
tests/helpers/: mod.rs
